--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,7 @@ passlib[bcrypt]==1.7.4
 bcrypt==4.1.2
 python-multipart==0.0.6
 openai==1.3.7
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+google-generativeai==0.3.2
+requests==2.31.0
+httpx==0.25.2 
